<resources>
    <string name="app_name">智慧泸州社保</string>
    <string name="apk_name">Palm.apk</string>
    <string name="network_error">网络异常，请检查网络设置</string>
    <string name="loading">正在努力加载中...</string>
    <string name="child">000003</string>
    <string name="tokenKey">L8li7u9uo0hwq</string>
    <string name="personal_center">个人中心</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="user_info">个人信息</string>
    <string name="phone">手机</string>
    <string name="phone_num">手机号</string>
    <string name="old_phone_num">原手机号</string>
    <string name="new_phone_num">新手机号</string>
    <string name="passwd">密码</string>
    <string name="tip_phone">请输入手机号</string>
    <string name="tip_passwd">请输入密码</string>
    <string name="tip_msg_code">请输入短信验证码</string>
    <string name="get_msg_code">获取验证码</string>
    <string name="img_code">图形验证码</string>
    <string name="register_label">立即注册</string>
    <string name="code">验证码</string>
    <string name="set_pwd">设置密码</string>
    <string name="tel_num">手机号</string>
    <string name="pls_input_tel">请输入11位手机号码</string>
    <string name="pls_input_passwd_register">请输入密码(6-20位)</string>
    <string name="pls_input_new_phone_num">请输入新手机号</string>
    <string name="pls_input_contact_addr">请输入联系地址</string>
    <string name="pls_input_img_code">请输入图形验证码</string>
    <string name="failed_get_img_code">获取图形验证码失败，请重试</string>
    <string name="account">账号</string>
    <string name="code_sent">已发送(%1$s)</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="birthday">出生日期</string>
    <string name="latest_version">已是最新版本</string>
    <string name="find_new_version">发现新版本(v%s)，是否立即更新?</string>
    <string name="find_new_version_force">发现新版本(v%s)，请立即更新</string>
    <string name="updating">应用更新</string>
    <string name="version_waiting">正在下载...</string>
    <string name="check_sdcard">请检查SD卡是否已插入手机</string>
    <string name="failed_download_apk">下载最新安装包失败，请稍候重试</string>
    <string name="input_tip_tel_length_error">手机号码格式不正确</string>
    <string name="input_tip_new_tel_length_error">新手机号码格式不正确</string>
    <string name="input_tip_tel_pwd_length_error">密码不能少于6位</string>
    <string name="input_tip_tel_passwd">手机号、密码不能为空 </string>
    <string name="input_tip_msg_code">请输入您收到的短信验证码</string>
    <string name="input_tip_name_passwd">请输入用户名和密码</string>
    <string name="phone_newphone_same">新手机号不能和已经绑定的手机号相同</string>
    <string name="input_tip_phone">请输入手机号</string>
    <string name="input_tip_phone_new">请输入新手机号</string>
    <string name="input_tip_idcard">请输入身份证号</string>
    <string name="input_tip_user_name">请输入真实姓名</string>
    <string name="input_tip_nation">请输入民族</string>
    <string name="input_tip_registered_residence">请输入户口所在地</string>
    <string name="luzhou">泸州</string>
    <string name="input_tip_contact_phone">请输入联系电话</string>
    <string name="input_tip_old_passwd">请输入原始密码</string>
    <string name="input_tip_new_passwd">请输入新密码(6-20位)</string>
    <string name="own_payed_2009_before_info">单位缴费及2009年缴费记录请在个人账户中查询</string>
    <string name="pls_reget_msg_code">请重新获取短信验证码</string>
    <string name="success_send_msg">发送短信成功</string>
    <string name="sending_msg_code">正在发送验证码...</string>
    <string name="submiting">正在提交...</string>
    <string name="logining">正在登录...</string>
    <string name="forget_passwd">忘记密码</string>
    <string name="ok">确认</string>
    <string name="auth_code">验证码</string>
    <string name="message_auth_code">短信验证码</string>
    <string name="refind_passwd">找回密码</string>
    <string name="personal_account">养老保险个人账户情况</string>
    <string name="personal_account_title">%1$s养老保险个人账户情况</string>
    <string name="personal_pay">社保个体缴费</string>
    <string name="personal_pay_info">社保个体缴费记录</string>
    <string name="personal_payment_info">个体缴费信息</string>
    <string name="personal_new_insured">个人新参保</string>
    <string name="yanglao_new_insured">养老保险新参保</string>
    <string name="yiliao_new_insured">医疗保险新参保</string>
    <string name="new_insured">新参保</string>
    <string name="pension_info">养老金情况</string>
    <string name="pension_info_title">%1$s养老金情况</string>
    <string name="pension_grant_info">养老金发放情况</string>
    <string name="pension_form_info">养老金构成情况</string>
    <string name="bind_idcard">身份绑定</string>
    <string name="unbind_idcard">身份解除绑定</string>
    <string name="about">关于</string>
    <string name="switch_user">切换用户</string>
    <string name="exit">退出</string>
    <string name="setting">设置</string>
    <string name="update_passwd">修改密码</string>
    <string name="update_phone">修改手机号</string>
    <string name="user_name">姓名</string>
    <string name="idcard">身份证</string>
    <string name="registered_residence">户口所在地</string>
    <string name="load_user_failed">加载用户信息失败，请重新登录</string>
    <string name="load_user_info_failed">加载用户信息失败，请稍候再试!</string>
    <string name="invalid_idcard">请输入正确的身份证号</string>
    <string name="pls_select_own_pay">您输入的是自己的身份信息，请选择本人缴费</string>
    <string name="checking_version">正在检测...</string>
    <string name="handling_payed_info">正在处理支付结果...</string>
    <string name="failed_update_msg">修改手机号失败，请稍候重试!</string>
    <string name="failed_get_pension_grant">获取养老金发放情况失败，请稍候再试!</string>
    <string name="failed_load_pay_info">获取缴费信息失败，请稍候再试!</string>
    <string name="failed_auth_code">您输入的验证码不正确</string>
    <string name="failed_login_user_or_passswd">登录失败,用户名或密码错误</string>
    <string name="person_id">个人编号</string>
    <string name="cardid">身份证</string>
    <string name="username">姓名</string>
    <string name="company_id">单位编号</string>
    <string name="company_name">单位名称</string>
    <string name="contact_phone">联系电话</string>
    <string name="contact_addr">联系地址</string>
    <string name="pension_state">养老参保状态</string>
    <string name="pension">养老保险</string>
    <string name="yiliao">医疗保险</string>
    <string name="gs_pension">工伤保险</string>
    <string name="sy_pension">生育保险</string>
    <string name="all">全部</string>
    <string name="pay_year">缴费年度</string>
    <string name="pay_months">缴费月数</string>
    <string name="pay_year_count">累计年限</string>
    <string name="pay_salary">缴费工资</string>
    <string name="pay_balance">账户金额</string>
    <string name="pay_exponent">缴费工资指数</string>
    <string name="pay_sum">缴费金额</string>
    <string name="pay_total">缴费合计</string>
    <string name="start_year_month">开始年月</string>
    <string name="end_year_month">结束年月</string>
    <string name="pay_date">缴费日期</string>
    <string name="payed_year_mont">发放年月</string>
    <string name="payed_sum">发放金额</string>
    <string name="payed_account">发放账号</string>
    <string name="select_year">选择发放年度</string>
    <string name="insurance_org">参保机构</string>
    <string name="pay_begin_month">开始月度</string>
    <string name="pay_begin_year_month">开始月度</string>
    <string name="pay_begin_year_month1">缴费开始年月</string>
    <string name="pay_begin_year_month2">缴费开始年月:&#160;%1$s年%2$s月</string>
    <string name="pay_end_month">结束月度</string>
    <string name="pay_end_year_month">结束年月</string>
    <string name="pay_end_year_month1">缴费结束年月</string>
    <string name="pay_end_year_month2">缴费结束年月:&#160;%1$s年%2$s月</string>
    <string name="pay_level">缴费档次</string>
    <string name="pay_calculate">缴费计算</string>
    <string name="pls_sel_pay_level">请选择缴费档次</string>
    <string name="pls_sel_pay_end_month">请选择缴费结束月度</string>
    <string name="calculating">正在计算...</string>
    <string name="failed_calculate_pay">缴费计算失败，请稍候重试!</string>
    <string name="pay">缴费</string>
    <string name="pay_base">缴费基数</string>
    <string name="personal_pay_principal">个人缴费本金</string>
    <string name="personal_pay_interest">个人缴费利息</string>
    <string name="personal_pay_overdue">个人缴费滞纳金</string>
    <string name="personal_pay_order_no">个体缴费订单号</string>
    <string name="personal_pay_list_no">个体缴费单据号</string>
    <string name="submit">提交</string>
    <string name="pension_form">养老金构成情况</string>
    <string name="adjust_wages">历年调资情况</string>
    <string name="retirement_year_month">退休年月</string>
    <string name="treatment_sum">待遇合计</string>
    <string name="base_pension">基础养老金</string>
    <string name="account_pension">账户养老金</string>
    <string name="adjust_time">调整时间</string>
    <string name="adjust_sum">调整合计</string>
    <string name="sex">性别</string>
    <string name="nation">民族</string>
    <string name="update_pwd">修改密码</string>
    <string name="dialog_prositiveButton">确定</string>
    <string name="dialog_negativeButton">取消</string>
    <string name="yuan">%1$s元</string>
    <string name="yuan_per_month">%1$s元/月</string>
    <string name="year">%1$s年</string>
    <string name="month">%1$s月</string>
    <string name="year_month">%1$s年%2$s月</string>
    <string name="year_month_num">%1$s年%2$s个月</string>
    <string name="month_num">%1$s个月</string>
    <string name="old_passwd">原始密码</string>
    <string name="new_passwd">新密码</string>
    <string name="bind_tip">&#160;当前手机号与社保登记手机号不同，无法获取社保账户信息，你可到街道、社区、乡镇社保服务窗口修改手机号，重新绑定后以获取更高权限，或者通过完成一次社会保险费缴纳自动更改社保登记手机号。</string>
    <string name="pay_info_none">暂无缴费信息</string>
    <string name="version_check">版本检测</string>
    <string name="exit_click">再按一次退出程序</string>
    <string name="register_phone_tip">&#160;为了拥有更高的权限，请使用与社保账号信息一致的手机号</string>
    <string name="userinfo_update">个人信息变更</string>
    <string name="pay_yanglao">职工养老保险个体缴费</string>
    <string name="pay_yiliao">职工医疗保险个体缴费</string>
    <string name="pay_yanglao_info">职工养老保险个体缴费记录</string>
    <string name="pay_yiliao_info">职工医疗保险个体缴费记录</string>
    <string name="personal_pay_yanglao_info_title">%1$s职工养老保险个体缴费记录</string>
    <string name="personal_pay_yiliao_info_title">%1$s职工医疗保险个体缴费记录</string>
    <string name="devloping_pay_yiliao">暂未开通职工医疗保险个体缴费，敬请期待！</string>
    <string name="pay_time">缴费时间</string>
    <string name="account_total">截止上年底的账户总额:&#160;%1$s元</string>
    <string name="account_pay_years_1">累计缴费年限:&#160;%1$d个月</string>
    <string name="account_pay_years_2">累计缴费年限:&#160;%1$d年</string>
    <string name="account_pay_years_3">累计缴费年限:&#160;%1$d年%2$d个月</string>
    <string name="account_principal">本年个人账户本金:&#160;%1$s元</string>
    <string name="account_balance">账户金额:&#160;%1$s元</string>
    <string name="grant_info">发放记录</string>
    <string name="retirement_time">退休年月:&#160;</string>
    <string name="retirement_pension_start">退休时初始养老金:&#160;</string>
    <string name="curr_pension">当前养老金:&#160;</string>
    <string name="adjust_wages_num">历年调资:&#160;</string>
    <string name="adjust_wages_year">%1$s年以来调资</string>
    <string name="adjust_wages_money">调资金额</string>
    <string name="pension_year_info">%1$s职工养老保险%2$s年个人账户情况</string>
    <string name="pay_month">缴费月份</string>
    <string name="personal_pay_rate">缴费比例</string>
    <string name="personal_pay_sum">缴费金额</string>
    <string name="pay_month_base">月缴费基数</string>
    <string name="no_address">暂无地址信息</string>
    <string name="query">查询</string>
    <string name="bm_service">便民服务</string>
    <string name="yl_query">医疗保险查询</string>
    <string name="yanglao_query">养老保险查询</string>
    <string name="self_payed">本人缴费</string>
    <string name="other_payed">替他人缴费</string>
    <string name="self_payed_record">本人缴费记录</string>
    <string name="other_payed_record">替他人缴费记录</string>
    <string name="no_right">当前账号没有权限进行此操作</string>
    <string name="brief">社保简介</string>
    <string name="opt_help">操作指南</string>
    <string name="pay_type">支付方式</string>
    <string name="ccbpay">建行支付</string>
    <string name="unionpay">银联支付</string>
    <string name="abcpay">农行支付</string>
    <string name="alipay">支付宝支付</string>
    <string name="weixinpay">微信支付</string>
    <string name="developing">暂未开通</string>
    <string name="order_desc">该订单需支付金额:%1$s元</string>
    <string name="pay_now">立即支付</string>
    <string name="order">交易记录查询</string>
    <string name="order_no">订单号:&#160;%1$s</string>
    <string name="order_payed_user">姓名:&#160;%1$s</string>
</resources>