<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:layout_gravity="start"
    android:orientation="vertical"
    android:paddingTop="0dp">

    <include layout="@layout/view_toolbar" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="30dp"
        android:background="@color/line"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:background="@color/white"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/tel_num" />

        <EditText
            android:id="@+id/et_tel"
            style="@style/edit_text_unline"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/pls_input_tel"
            android:textColorHint="@color/line"
            android:inputType="number"
            android:maxLength="11"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:singleLine="true" />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line"/>
    <org.kteam.palm.common.view.TipTextView
        android:id="@+id/tv_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:lineSpacingExtra="5dp"
        app:leftIcon="@mipmap/tip"
        android:text="@string/register_phone_tip"
        android:textColor="@color/article_content"
        android:textSize="14dp"/>
    <Button
        android:id="@+id/btn_send_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:background="@drawable/login_button_selector"
        android:padding="10dp"
        android:text="@string/get_msg_code"
        android:textColor="@color/white"
        android:textSize="17dp" />
</LinearLayout>
