<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:layout_gravity="start"
    android:orientation="vertical"
    android:paddingTop="0dp">

    <include layout="@layout/view_toolbar" />

    <org.kteam.palm.common.view.ElasticScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        android:scrollbars="none"
        android:fadingEdge="none"
        android:fillViewport="true"
        android:layout_weight="1">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="30dp"
                android:background="@color/line"/>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"
                android:paddingRight="15dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:textColor="@color/colorPrimary"
                    android:gravity="center"
                    android:text="@string/tel_num" />

                <TextView
                    android:id="@+id/tv_tel"
                    style="@style/edit_text_unline"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/pls_input_tel"
                    android:textColorHint="@color/line"
                    android:inputType="number"
                    android:maxLength="11"
                    android:paddingBottom="15dp"
                    android:paddingTop="15dp"
                    android:singleLine="true" />
            </TableRow>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@drawable/line_padding_left_15"/>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"
                android:paddingRight="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:textColor="@color/colorPrimary"
                    android:gravity="right"
                    android:text="@string/user_name" />

                <EditText
                    android:id="@+id/et_user_name"
                    style="@style/edit_text_unline"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/input_tip_user_name"
                    android:textColorHint="@color/line"
                    android:paddingBottom="15dp"
                    android:paddingTop="15dp"
                    android:singleLine="true" />
            </TableRow>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@drawable/line_padding_left_15"/>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"
                android:paddingRight="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:textColor="@color/colorPrimary"
                    android:gravity="right"
                    android:text="@string/idcard" />

                <EditText
                    android:id="@+id/et_idcard"
                    style="@style/edit_text_unline"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/input_tip_idcard"
                    android:textColorHint="@color/line"
                    android:paddingBottom="15dp"
                    android:paddingTop="15dp"
                    android:singleLine="true" />
            </TableRow>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@drawable/line_padding_left_15"/>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="5dp"
                android:paddingLeft="15dp"
                android:orientation="horizontal"
                android:background="@color/white"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:textColor="@color/colorPrimary"
                    android:gravity="right"
                    android:text="@string/passwd" />

                <EditText
                    android:id="@+id/et_passswd"
                    style="@style/edit_text_unline"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/pls_input_passwd_register"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:paddingBottom="15dp"
                    android:textColorHint="@color/line"
                    android:paddingTop="15dp"
                    android:singleLine="true" />

                <org.kteam.palm.common.view.SwitchButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/sb_pwd"
                    app:switchOnBg="@mipmap/switch_bg_switch"
                    app:switchOffBg="@mipmap/switch_bg_switch"
                    app:slipBtn="@mipmap/switch_button"/>
            </TableRow>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@drawable/line_padding_left_15"/>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"
                android:paddingRight="5dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:textColor="@color/colorPrimary"
                    android:gravity="right"
                    android:text="@string/img_code" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                    <com.facebook.drawee.view.SimpleDraweeView
                        android:id="@+id/sdv"
                        android:layout_width="80dp"
                        android:layout_height="30dp"
                        app:actualImageScaleType="centerInside" />
                    <EditText
                        android:id="@+id/et_img_code"
                        style="@style/edit_text_unline"
                        android:textSize="18dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:hint="@string/pls_input_img_code"
                        android:maxLength="8"
                        android:paddingBottom="15dp"
                        android:textColorHint="@color/line"
                        android:paddingTop="15dp"
                        android:singleLine="true" />
                </LinearLayout>


            </TableRow>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@drawable/line_padding_left_15"/>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"
                android:paddingRight="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:textColor="@color/colorPrimary"
                    android:gravity="right"
                    android:text="@string/code" />

                <EditText
                    android:id="@+id/et_msg_code"
                    style="@style/edit_text_unline"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/tip_msg_code"
                    android:textColorHint="@color/line"
                    android:maxLength="12"
                    android:paddingBottom="15dp"
                    android:paddingTop="15dp"
                    android:singleLine="true" />
                <Button
                    android:id="@+id/btn_msg_code"
                    android:layout_width="wrap_content"
                    android:layout_height="26dp"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:text="@string/get_msg_code"
                    android:minHeight="0dp"
                    android:textColor="@color/article_content"
                    android:textSize="12dp"
                    android:background="@mipmap/reg_bt"/>
            </TableRow>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/line"/>

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:background="@drawable/login_button_selector"
                android:padding="10dp"
                android:text="@string/register_label"
                android:textColor="@color/white"
                android:textSize="17dp" />
        </TableLayout>
    </org.kteam.palm.common.view.ElasticScrollView>
</LinearLayout>
