<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:orientation="vertical"
    android:paddingTop="0dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:ellipsize="end"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:gravity="center"
            android:text="@string/retirement_year_month"
            android:textSize="15dp"
            android:textColor="@color/colorPrimary"/>
        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/line"/>
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:ellipsize="end"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:gravity="center"
            android:text="@string/treatment_sum"
            android:textSize="15dp"
            android:textColor="@color/colorPrimary"/>
        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/line"/>
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:ellipsize="end"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:gravity="center"
            android:text="@string/base_pension"
            android:textSize="15dp"
            android:textColor="@color/colorPrimary"/>
        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/line"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:ellipsize="end"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/account_pension"
            android:textSize="15dp"
            android:textColor="@color/colorPrimary"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line"/>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"/>
</LinearLayout>