<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/main_bg"
    android:layout_gravity="start"
    android:orientation="vertical"
    android:paddingTop="0dp">

    <include layout="@layout/view_toolbar" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="30dp"
            android:background="@color/line"/>
        <TableRow
            android:id="@+id/layout_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:background="@color/white"
            android:paddingRight="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="right"
                android:text="@string/tel_num"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                style="@style/edit_text_unline"
                android:inputType="number"
                android:maxLength="11"
                android:layout_weight="1"
                android:hint="@string/input_tip_phone"
                android:textColorHint="@color/line"
                android:background="@null"
                android:textSize="16dp" />
        </TableRow>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@drawable/line_padding_left_15"/>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:paddingRight="5dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textColor="@color/colorPrimary"
                android:gravity="right"
                android:text="@string/img_code" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:orientation="horizontal">
                <com.facebook.drawee.view.SimpleDraweeView
                    android:id="@+id/sdv"
                    android:layout_width="72dp"
                    android:layout_height="24dp"
                    app:actualImageScaleType="fitXY" />
                <EditText
                    android:id="@+id/et_img_code"
                    style="@style/edit_text_unline"
                    android:textSize="16dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/pls_input_img_code"
                    android:maxLength="8"
                    android:paddingBottom="15dp"
                    android:textColorHint="@color/line"
                    android:paddingTop="15dp"
                    android:singleLine="true" />
            </LinearLayout>


        </TableRow>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/line"/>
        <Button
            android:id="@+id/btn_send_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="50dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/login_button_selector"
            android:text="@string/get_msg_code"
            android:textColor="@color/white"
            android:textSize="17dp" />
    </TableLayout>
</LinearLayout>